fix show styling for modal on mobile

--- a/src/pages/App.scss
+++ b/src/pages/App.scss
@@ -67,7 +67,7 @@ h2 {
     overflow: hidden;
 }
 
-.show {
+.show-filter {
     max-height: fit-content;
     transition: max-height 0.25s ease-in;
 }
